--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: 'Segoe UI', sans-serif;
     background: white;
     margin: 0;
@@ -115,4 +115,4 @@ form {
 
 .logoutButton{
     margin-top: 20px;
-}
+} */
