--- a/templates/component_view.html
+++ b/templates/component_view.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Component Detail</title>
-</head>
-<body>
-    <h2>Detail View for {{ component }}</h2>
-    <p>(This page is for future drill-down expansion)</p>
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Component Detail - Tool Life Simulator{% endblock %}
+{% block content %}
+<div class="text-center">
+    <h2 class="mb-4">Detail View for <span class="badge bg-primary">{{ component }}</span></h2>
+    <div class="alert alert-info">
+        (This page is for future drill-down expansion)
+    </div>
+    <a href="/" class="btn btn-outline-secondary mt-4">
+        <i class="fas fa-arrow-left me-2"></i>Back to Home
+    </a>
+</div>
+{% endblock %}
